--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div><h1>Hello , New Java EE Project</h1></div>
+    <div><h1>Hello , New Java EE Project test</h1></div>
   </body>
 </html>
