--- a/web/test.html
+++ b/web/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>test</title>
+    <title>Products</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -16,14 +16,23 @@
     <style type="text/tailwindcss">
       @layer utilities {
         .inputs {
-          @apply border rounded-lg p-2 outline-primary w-full;
+          @apply border rounded-lg p-2 outline-primary w-full placeholder:text-gray-400;
+        }
+        .image {
+          @apply block w-full file:text-gray-400 border border-gray-200 rounded-lg focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none file:bg-gray-50 file:border-0 file:me-4 file:py-2 file:px-2;
+        }
+        .remove {
+          @apply text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer;
+        }
+        .normal {
+          @apply text-white bg-primary hover:bg-primaryLight focus:ring-4 focus:outline-none focus:ring-primaryLight font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer;
         }
       }
     </style>
   </head>
   <body>
     <div class="flex min-h-screen">
-      <div class="bg-primary w-[19%] py-5 flex flex-col">
+      <div class="bg-primary w-[19%] py-5 flex flex-col h-screen sticky top-0">
         <div class="w-full flex flex-col items-center">
           <a class="w-[70%]" href="../"
             ><img class="w-full" src="./img/2.png" alt="logo"
@@ -33,7 +42,7 @@
         <div class="px-5 text-white mt-10 flex flex-col">
           <a
             class="flex items-center py-2 px-3 hover:bg-primaryLight rounded-lg"
-            href="#"
+            href="./"
             ><i class="fa-solid fa-compass text-2xl w-10"></i>
             <div>Dashboard</div></a
           >
@@ -45,7 +54,7 @@
           >
           <a
             class="flex items-center py-2 px-3 hover:bg-primaryLight rounded-lg"
-            href="#"
+            href="./products.jsp"
             ><i class="fa-solid fa-tags text-2xl w-10"></i>
             <div>Products</div></a
           >
@@ -73,8 +82,8 @@
       </div>
       <div class="bg-gray-200 w-[81%] flex flex-col">
         <div class="bg-white py-5 px-10 flex justify-between">
-          <div class="flex items-center gap-3">
-            <i class="fa-solid fa-magnifying-glass"></i>
+          <div class="flex items-center gap-2">
+            <i class="fa-solid fa-magnifying-glass gap-3"></i>
             <input
               class="focus:outline-none w-full placeholder:text-gray-400 border-0 focus:ring-0"
               type="text"
@@ -95,22 +104,22 @@
             </div>
           </div>
         </div>
+        <div class="p-5 flex flex-col gap-5">
+          <!-- body strat here -->
 
-        <!-- body strat here -->
-        <div class="p-5">
           <div class="bg-white rounded-lg border flex flex-col">
             <div class="font-bold text-xl font-mono py-2 px-5 border-b">
               New Product
             </div>
             <form
-              action="addProduct"
+              action="../addProduct"
               method="POST"
               id="pform"
               enctype="multipart/form-data"
               class="p-5 flex flex-col"
             >
-              <div class="flex gap-5">
-                <div class="w-[70%] flex flex-col gap-5">
+              <div class="flex gap-3">
+                <div class="w-[70%] flex flex-col gap-3">
                   <div>
                     <div>Name</div>
                     <input
@@ -119,7 +128,43 @@
                       name="name"
                       id="name"
                       placeholder="Product Name"
+                      required
                     />
+                  </div>
+                  <div>
+                    <div>Brand</div>
+                    <input
+                      class="inputs"
+                      type="text"
+                      name="brand"
+                      id="brand"
+                      placeholder="Brand Name"
+                      required
+                    />
+                  </div>
+                  <div class="flex w-full gap-3">
+                    <div class="w-[50%]">
+                      <div>Price (LKR)</div>
+                      <input
+                        class="inputs"
+                        type="text"
+                        name="price"
+                        id="price"
+                        placeholder="Product Price"
+                        required
+                      />
+                    </div>
+                    <div class="w-[50%]">
+                      <div>Discount (%)</div>
+                      <input
+                        class="inputs"
+                        type="text"
+                        name="discount"
+                        id="discount"
+                        placeholder="Discount Percentage"
+                        required
+                      />
+                    </div>
                   </div>
                   <div>
                     <div>Description</div>
@@ -130,24 +175,30 @@
                       cols="30"
                       rows="5"
                       placeholder="Product Description"
+                      required
                     ></textarea>
                   </div>
-                  <div class="w-full flex gap-5">
+                  <div class="w-full flex gap-3">
                     <div class="w-full">
                       <div>Sizes</div>
-                      <div class="flex">
-                        <input type="text" class="inputs" id="size" />
+                      <div class="flex items-center gap-1">
+                        <input
+                          type="text"
+                          class="inputs"
+                          id="size"
+                          placeholder="type size"
+                        />
                         <input
                           type="button"
                           value="Add"
                           id="sadd"
-                          class="ml-1 bg-primary text-white px-3 py-1 rounded-lg"
+                          class="normal"
                         />
                         <input
                           type="button"
                           value="Undo"
                           id="sdelete"
-                          class="ml-1 bg-red-900 text-white px-3 py-1 rounded-lg"
+                          class="remove"
                         />
                       </div>
                       <div
@@ -157,20 +208,21 @@
                     </div>
                     <div class="w-full">
                       <div>Colors</div>
-                      <div class="flex">
-                        <input type="text" class="inputs" id="color" />
+                      <div class="flex items-center gap-1">
+                        <input
+                          type="text"
+                          class="inputs"
+                          id="color"
+                          placeholder="type color"
+                        />
                         <input
                           type="button"
                           value="Add"
                           id="cadd"
-                          class="ml-1 bg-primary text-white px-3 py-1 rounded-lg"
+                          class="normal"
                         />
-                        <input
-                          type="button"
-                          value="Undo"
-                          id="cdelete"
-                          class="ml-1 bg-red-900 text-white px-3 py-1 rounded-lg"
-                        />
+                        <input type="button" value="Undo" id="cdelete"
+                        class="remove
                       </div>
                       <div
                         class="w-full flex flex-wrap gap-1 mt-1"
@@ -179,59 +231,92 @@
                     </div>
                   </div>
                 </div>
-                <div class="w-[30%] flex flex-col gap-5">
+                <div class="w-[30%] flex flex-col gap-3">
                   <div>
-                    <div>Brand</div>
+                    <div>Cover Image</div>
                     <input
-                      class="inputs"
-                      type="text"
-                      name="brand"
-                      id="brand"
-                      placeholder="Brand Name"
-                    />
-                  </div>
-                  <div>
-                    <div>Price (LKR)</div>
-                    <input
-                      class="inputs"
-                      type="text"
-                      name="price"
-                      id="price"
-                      placeholder="Product Price"
-                    />
-                  </div>
-                  <div>
-                    <div>Discount (%)</div>
-                    <input
-                      class="inputs"
-                      type="text"
-                      name="discount"
-                      id="discount"
-                      placeholder="Discount Percentage"
-                    />
-                  </div>
-                  <div>
-                    <div>Image</div>
-                    <input
-                      class="block w-full border border-gray-200 rounded-lg focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none file:bg-gray-50 file:border-0 file:me-4 file:py-2 file:px-2"
+                      class="image"
                       type="file"
-                      name="pimage"
-                      id="pimage"
+                      name="cimage"
+                      id="cimage"
                       accept="image/png, image/gif, image/jpeg"
+                      required
+                    />
+                  </div>
+                  <div>
+                    <div>Image 1</div>
+                    <input
+                      class="image"
+                      type="file"
+                      name="image1"
+                      id="image1"
+                      accept="image/png, image/gif, image/jpeg"
+                      required
+                    />
+                  </div>
+                  <div>
+                    <div>Image 2</div>
+                    <input
+                      class="image"
+                      type="file"
+                      name="image2"
+                      id="image2"
+                      accept="image/png, image/gif, image/jpeg"
+                      required
+                    />
+                  </div>
+                  <div>
+                    <div>Image 3</div>
+                    <input
+                      class="image"
+                      type="file"
+                      name="image3"
+                      id="image3"
+                      accept="image/png, image/gif, image/jpeg"
+                      required
                     />
                   </div>
                 </div>
               </div>
               <input
-                class="bg-primary text-white px-3 py-1 rounded-lg w-[150px] mt-5 cursor"
+                class="normal mt-3 w-[200px]"
                 type="submit"
                 value="Add Product"
               />
             </form>
           </div>
-        </div>
 
-        <!-- body end here -->
+          <div class="bg-white rounded-lg border flex flex-col">
+            <div class="font-bold text-xl font-mono py-2 px-5 border-b">
+              All Products
+            </div>
+            <div class="p-5 flex flex-col gap-2">
+              <div class="flex w-full font-semibold border rounded-lg">
+                <div class="w-full text-center">ID</div>
+                <div class="w-full text-center">Name</div>
+                <div class="w-full text-center">Brand</div>
+                <div class="w-full text-center">Price</div>
+                <div class="w-full text-center">Discount</div>
+                <div class="w-full text-center">Action</div>
+              </div>
+              <div class="flex w-full border rounded-lg items-center p-1">
+                <div class="w-full text-center">#2334</div>
+                <a href="#" class="w-full text-center">Air Jordan 1 Mid</a>
+                <div class="w-full text-center">Nike</div>
+                <div class="w-full text-center">LKR 6000</div>
+                <div class="w-full text-center">20%</div>
+                <div class="w-full flex justify-center gap-2">
+                  <a class="normal" type="button" href="#">Edit</a>
+                  <form action="#" method="POST">
+                    <input class="remove" type="submit" value="Remove" />
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- body end here -->
+        </div>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
