--- a/web/admin/products/test.html
+++ b/web/admin/products/test.html
@@ -411,6 +411,7 @@
             <div class="box-title">All Products</div>
             <div class="box-body">
               <div class="flex w-full font-semibold rounded-lg">
+                <div class="w-full text-center">Image</div>
                 <div class="w-full text-center">ID</div>
                 <div class="w-full text-center">Name</div>
                 <div class="w-full text-center">Brand</div>
@@ -419,6 +420,13 @@
                 <div class="w-full text-center">Action</div>
               </div>
               <div class="flex w-full border rounded-lg items-center p-1">
+                <div class="w-full flex justify-center">
+                  <img
+                    class="w-[70px] h-[70px] rounded-lg"
+                    src="../../img/demo.jpg"
+                    alt="product"
+                  />
+                </div>
                 <div class="w-full text-center">#2334</div>
                 <a href="#" class="w-full text-center">Air Jordan 1 Mid</a>
                 <div class="w-full text-center">Nike</div>
