confirm box added

--- a/web/admin/orders/test.html
+++ b/web/admin/orders/test.html
@@ -206,25 +206,44 @@
               <div class="list-item justify-between">
                 <div class="w-[10%] max-md:w-[20%]">#1</div>
                 <a href="#" class="item-width max-md:hidden">John Doe</a>
-                <div class="item-width max-md:w-[40%]">nipunavishka123@gmail.com</div>
+                <div class="item-width max-md:w-[40%]">
+                  nipunavishka123@gmail.com
+                </div>
                 <div class="item-width max-md:hidden">5</div>
-                <div class="item-width max-md:hidden flex items-center justify-center gap-1"><span class="flex w-3 h-3 bg-green-500 rounded-full"></span>Active</div>
+                <div
+                  class="item-width max-md:hidden flex items-center justify-center gap-1"
+                >
+                  <span class="flex w-3 h-3 bg-green-500 rounded-full"></span
+                  >Active
+                </div>
                 <div class="item-width max-md:hidden">2022-01-01</div>
-                <div class="item-width max-md:w-[40%] flex justify-center gap-1">
+                <div
+                  class="item-width max-md:w-[40%] flex justify-center gap-1"
+                >
                   <form action="#" class="reset">
-                    <input type="hidden" name="id" value="1">
-                    <button class="border border-blue-600 bg-blue-600 py-1 px-2 flex gap-1 items-center rounded-lg text-white duration-300 hover:text-blue-600 hover:bg-white"><i class="fa-solid fa-lock-open"></i><div>Reset</div></button>
+                    <input type="hidden" name="id" value="1" />
+                    <button
+                      class="border border-blue-600 bg-blue-600 py-1 px-2 flex gap-1 items-center rounded-lg text-white duration-300 hover:text-blue-600 hover:bg-white"
+                    >
+                      <i class="fa-solid fa-lock-open"></i>
+                      <div>Reset</div>
+                    </button>
                   </form>
                   <form action="#" class="block">
-                    <input type="hidden" name="id" value="1">
-                    <button class="border border-red-600 bg-red-600 py-1 px-2 flex gap-1 items-center rounded-lg text-white duration-300 hover:text-red-600 hover:bg-white"><i class="fa-solid fa-user-xmark"></i><div>Block</div></button>
+                    <input type="hidden" name="id" value="1" />
+                    <button
+                      class="border border-red-600 bg-red-600 py-1 px-2 flex gap-1 items-center rounded-lg text-white duration-300 hover:text-red-600 hover:bg-white"
+                    >
+                      <i class="fa-solid fa-user-xmark"></i>
+                      <div>Block</div>
+                    </button>
                   </form>
                 </div>
+              </div>
+              <div class="list-item flex justify-center">
+                no user registered
+              </div>
             </div>
-            <div class="list-item flex justify-center">
-              no user registered
-            </div>
-
           </div>
 
           <!-- body end here -->
