get user address update

--- a/web/admin/orders/test.html
+++ b/web/admin/orders/test.html
@@ -42,7 +42,7 @@
           @apply p-5 flex flex-col gap-3;
         }
         .input-lable {
-          @apply block mb-1 text-sm font-medium text-gray-900;
+          @apply block mb-1 text-sm font-medium text-gray-600;
         }
       }
     </style>
@@ -194,7 +194,9 @@
           <div class="flex gap-5">
             <div class="w-[40%] flex flex-col gap-5">
               <div class="box">
-                <div class="py-2 px-5 border-b flex justify-between bg-gray-100">
+                <div
+                  class="py-2 px-5 border-b flex justify-between bg-gray-100"
+                >
                   <div class="font-bold text-xl font-mono text-gray-600">
                     Customer Details<span class="text-gray-400">#12</span>
                   </div>
@@ -248,7 +250,9 @@
               </div>
               <div class="bg-white p-5 rounded-lg text-sm flex flex-col gap-2">
                 <div class="flex justify-between">
-                  <div class="text-gray-400">Reset customer account password to default password.</div>
+                  <div class="text-gray-400">
+                    Reset customer account password to default password.
+                  </div>
                   <div class="normal">Reset</div>
                 </div>
                 <div class="flex justify-between">
@@ -276,7 +280,9 @@
                           >15%</span
                         >
                       </div>
-                      <div>View Count <span class="text-gray-600">22</span></div>
+                      <div>
+                        View Count <span class="text-gray-600">22</span>
+                      </div>
                     </div>
                   </div>
                 </div>
