--- a/web/admin/orders/test.html
+++ b/web/admin/orders/test.html
@@ -191,8 +191,8 @@
             </ol>
           </nav>
 
-          <div class="flex gap-5">
-            <div class="w-[40%] flex flex-col gap-5">
+          <div class="flex flex-col lg:flex-row gap-5">
+            <div class="lg:w-[40%] flex flex-col gap-5">
               <div class="box">
                 <div
                   class="py-2 px-5 border-b flex justify-between bg-gray-100"
@@ -288,7 +288,7 @@
                 </div>
               </div>
             </div>
-            <div class="w-[60%] flex flex-col gap-5">
+            <div class="lg:w-[60%] flex flex-col gap-5">
               <div class="box">
                 <div class="box-title">Orders</div>
                 <div class="box-body">
@@ -314,7 +314,7 @@
                 <div class="box-title">Address Book</div>
                 <div class="box-body text-sm">
                   <div class="border py-3 px-5 rounded-lg flex flex-col gap-3">
-                    <div class="flex gap-10">
+                    <div class="flex gap-5 lg:gap-10 flex-wrap">
                       <div>
                         <div class="text-gray-400 font-semibold">
                           First Name
